<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/charactersConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fightModeLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/fightPageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="TextView"
                android:textAlignment="viewStart"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/prevFightButton"
                android:layout_width="70dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:onClick="prevPage"
                android:text="@string/button_prev"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/nextFightButton"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/nextFightButton"
                android:layout_width="70dp"
                android:layout_height="0dp"
                android:layout_marginEnd="4dp"
                android:onClick="nextPage"
                android:text="@string/button_next"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/goToAddCharacterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:onClick="goToAdd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_input_add" />

        <Spinner
            android:id="@+id/characterSortSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/character_sort_array"
            app:layout_constraintBottom_toTopOf="@+id/charactersRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/charactersRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/characterSortSpinner"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="201dp">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/gameCharactersTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/characters_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/gamePlayersTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/players_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/gameHistoryTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/matchHistory_tab" />
    </com.google.android.material.tabs.TabLayout>
</androidx.constraintlayout.widget.ConstraintLayout>